--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-grid": "^4.0.4",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
